app/redidropper/static/css/parallax.css
/* ==============================================================================================
This copyright notice must be kept untouched in the stylesheet at all times.
The original version of this stylesheet and the associated (x)html
is available at http://www.script-tutorials.com/bootstrap-one-page-template-with-parallax-effect/
Copyright (c) Script Tutorials. All rights reserved.
This stylesheet and the associated (x)html may be modified in any way to fit your requirements.
================================================================================================= */

/* padded section */
.pad-section {
  padding: 50px 0;
}

.go-down {
  border: 2px solid;
  border-radius: 50%;
  display: inline-block;
  font-size: 28px;
  height: 60px;
  line-height: 60px;
  text-align: center;
  vertical-align: middle;
  width: 60px;
}

.grey-color {
  color: #D8D8D8;
}

.body_offset {
  padding-top: 209px;
}

/* additional sections */
#home,
#image2,
#image3 {
  background: no-repeat center top;
  display: table;
  height: 45vh;
  position: relative;
  width: 100%;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

#home {
    background-image: url(/static/img/bottles_02.png);
    margin-top: -5px;
}

#image2 {
    background-image: url(/static/img/oil.jpg);
}

#image3 {
    background-image: url(/static/img/oil.jpg);
    filter: FlipV;
}

#github, #footer {
  position: relative;
  height: 100vh;
}

#about {
  position: relative;
  height: 80vh;
}

#signup {
  position: relative;
  height: 70vh;
}


#scrolldownicon a {
  color: #000000;
}

#scrolldownicon {
    margin-top: 15px;
}

.vcenter {
    width: 100%;
    position: absolute;
    top: 50%;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
}

/*#signup {
  height: 100vh;
}*/

.signup_icon {
    color: #8eb7b7;
}

#features  {
  position: relative;
    height: 135vh;
    background: url(/static/img/water_drop.png) no-repeat center center fixed;
    display: table;
    width: 100%;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.feature_display_img {
  width: 100%;
}

#help  {
    position: relative;
    height: 150vh;
    background: url(/static/img/oil_teal_50.png) no-repeat center center fixed;
    display: table;
    width: 100%;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.help_bg, .features_bg {
    background: rgba(231, 240, 249, 0.76);
}

.help_bg {
    padding: 20px;
}

.features_bg {
  padding: 20px 0;
}

.ul_features {
  list-style-type: none;
  text-align: left;
  font-weight: 900;
}

.ul_features p {
  font-weight: 400;
}

#github {
  height: 35vh;
  min-height: 400px;
  background-color: #4b4080;
  color: white;
}

#footer {
  /*height: 160vh;*/
  color: white;
  background-color: #3f4756;
}

.nia_logo {
    border: solid #999 1pt;
    border-radius: 9px;
}

/*So that all content and icon is visible on smaller screens*/

@media all and (min-width: 320px) {
  #footer {
    height: 190vh;
  }

  #help {
    height: 270vh;
  }

  #features {
    height: 165vh;
  }

}

@media all and (min-width: 360px) {
  #footer {
    height: 170vh;
  }

  #help {
    height: 200vh;
  }

  #features {
    height: 155vh;
  }

}

@media all and (min-width: 500px) {
  #signup {
    position: relative;
    height: 100vh;
  }
}

@media all and (min-width: 766px) {
  .body_offset {
    padding-top: 65px;
  }

    #footer, #help, #features {
    height: 100vh;
  }
}

@media (min-width: 768px) {
  .vcenter {
      width: 750px;
  }

  /*#footer {
    height: 55vh;
  }*/
}

@media (min-width: 992px) {
  .vcenter {
      width: 970px;
  }
}

@media all and (min-width: 1000px) {
  /*#image2, #image3 {
    min-height: 85vh;
  }

  #home {
    min-height: 45vh;
  }*/

  .feature_display_img {
    max-width: 500px;
  }

  /*#features {
    height: 90vh;
  }*/

  .help_bg, .features_bg {
    padding: 30px;
  }

  .signup_border {
    border: #8eb7b7 inset 8px;
    padding: 8rem 3rem 12rem;
  }
}

@media (min-width: 1200px) {
  .vcenter {
      width: 1170px;
  }
  /*#footer {
    height: 55vh;
  }*/
}

